# ros_fiducial_tracker

./: README.md
aruco_detect/src/: aruco_detect.cpp
fido/: CMakeLists.txt  package.xml
fiducial_tracker/: CMakeLists.txt  package.xml
fiducial_tracker/cfg/: DetectorParams.cfg
fiducial_tracker/launch/: aruco_detect.launch  camera.launch  camera_wide.launch  detect.launch  static_tf.launch  tracker.launch
fiducial_tracker/media/materials/scripts/: marker.material
fiducial_tracker/models/ground_marker/: model.config  model.sdf
fiducial_tracker/src/: aruco_detect.cpp  fiducial_tracker.cpp
fiducial_tracker/srv/: resetOrigin.srv
fiducial_tracker/worlds/: marker.world
fiducial_tracker/xacro/: marker.xacro
