<?xml version="1.0"?>
<package format="2">
  <name>ros_fiducial_tracker</name>
  <version>0.1.0</version>
  <description>Fiducial robot tracking</description>

  <maintainer email="marton@neorobot.hu">Marton Juhasz</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>fiducial_msgs</depend>
  <depend>visualization_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
